feat(build-action.yml): add new job Build-And-Test-Server-Unit-Tests to run after all unit tests have completed successfully refactor(build-action.yml): make Build-And-Test-Web job depend on Prepare job instead of directly on unit tests for better separation of concerns and maintainability

--- a/.github/workflows/build-action.yml
+++ b/.github/workflows/build-action.yml
@@ -180,6 +180,13 @@ jobs:
           echo "### Test Results for Unit Tests Chunk ${{ matrix.chunk }}" >> $GITHUB_STEP_SUMMARY
           cat profiling.md >> $GITHUB_STEP_SUMMARY
 
+  Build-And-Test-Server-Unit-Tests:
+    name: Build-And-Test-Server (Unit tests)
+    needs: [Run-Unit-Tests]
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "All unit tests completed successfully"
+
   Build-And-Test-Web:
     needs: Prepare
     timeout-minutes: 90
