--- a/.github/actions/live-tests-shared/action.yml
+++ b/.github/actions/live-tests-shared/action.yml
@@ -21,7 +21,7 @@ runs:
       env:
         USE_CUSTOM_LOCAL_NETWORK: 'true'
       run: |
-        git submodule update --init --recursive
+        GIT_LFS_SKIP_SMUDGE=1 git submodule update --init --recursive
         npm ci
         npm run build
         touch profiling.md
