--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,11 @@
 {
   "include": ["./src/**/*.ts"],
-  "exclude": ["./src/**/*.bc.js", "./src/build", "./src/examples", "./src/mina"],
+  "exclude": [
+    "./src/**/*.bc.js",
+    "./src/build",
+    "./src/examples",
+    "./src/mina"
+  ],
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "dist",
@@ -20,6 +25,7 @@
     "declaration": true, // declaration files are how library consumers get our types
     "noEmitOnError": false, // avoid accidentally shipping with type errors
     "allowJs": true, // to use JSDoc in some places where TS would be too cumbersome
-    "sourceMap": true
+    "sourceMap": true,
+    "noErrorTruncation": true
   }
 }
