Revert "dummy commit"
This reverts commit bb2852ef909d0f577349ce100d03f87c057e23a9.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,6 @@
 {
   "include": ["./src/**/*.ts"],
-  "exclude": [
-    "./src/**/*.bc.js",
-    "./src/build",
-    "./src/examples",
-    "./src/mina"
-  ],
+  "exclude": ["./src/**/*.bc.js", "./src/build", "./src/examples", "./src/mina"],
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "dist",
@@ -25,7 +20,6 @@
     "declaration": true, // declaration files are how library consumers get our types
     "noEmitOnError": false, // avoid accidentally shipping with type errors
     "allowJs": true, // to use JSDoc in some places where TS would be too cumbersome
-    "sourceMap": true,
-    "noErrorTruncation": true
+    "sourceMap": true
   }
 }
