build examples in CI

--- a/.github/workflows/build-action.yml
+++ b/.github/workflows/build-action.yml
@@ -34,9 +34,15 @@ jobs:
             dist
           key: ${{ runner.OS }}-node-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**/*.ts', '**/*.js') }}
 
-      - name: Build o1js
+      - name: Build examples
         if: steps.cache.outputs.cache-hit != 'true'
         run: |
+          npm ci
+          npm run build:examples
+      - name: Build o1js clean
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: |
+          rm -fr dist
           npm ci
           npm run build
 
