--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,67 @@ src/config.mlh
 .direnv
 .rustup
 result
+strace.txt
+# -*- mode: gitignore; -*-
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
+
+# Org-mode
+.org-id-locations
+*_archive
+
+# flymake-mode
+*_flymake.*
+
+# eshell files
+/eshell/history
+/eshell/lastdir
+
+# elpa packages
+/elpa/
+
+# reftex files
+*.rel
+
+# AUCTeX auto folder
+/auto/
+
+# cask packages
+.cask/
+dist/
+
+# Flycheck
+flycheck_*.el
+
+# server auth directory
+/server/
+
+# projectiles files
+.projectile
+
+# directory configuration
+.dir-locals.el
+
+# network security
+/network-security.data
+
+/.clinic/
+/_clinic/
+/.env
+/data/
+/perf-reporting/output/perf.data.tar.gz
+/perf-reporting/output/perf_script.txt
+/perf-reporting/output/tmp/
+/perf-reporting/output/untar/
+/perf-reporting/output/unzip/
+isolate-*.log
+ltrace.txt
+perf.data
+perf.data.old
+report.txt
