--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "src/mina"]
 	path = src/mina
 	url = https://github.com/MinaProtocol/mina.git
+[submodule "vendor/jest"]
+	path = vendor/jest
+	url = https://github.com/meta-introspector/jest.git
