--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "o1js",
+  "packageManager": "pnpm@9.10.0+sha512.73a29afa36a0d092ece5271de5177ecbf8318d454ecd701343131b8ebc0c1a91c487da46ab77c8e596d6acf1461e3594ced4becedf8921b074fbd8653ed7051c",
   "description": "TypeScript framework for zk-SNARKs and zkApps",
   "version": "1.8.0",
   "license": "Apache-2.0",
@@ -76,7 +77,7 @@
     "@noble/hashes": "^1.3.2",
     "@playwright/test": "^1.25.2",
     "@types/isomorphic-fetch": "^0.0.36",
-    "@types/jest": "^27.0.0",
+    "@types/jest": "^29.5.13",
     "@types/node": "^18.14.2",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "esbuild": "^0.19.2",
@@ -85,25 +86,35 @@
     "fs-extra": "^10.0.0",
     "glob": "^8.0.3",
     "howslow": "^0.1.0",
-    "jest": "^28.1.3",
     "jstat": "^1.9.6",
     "minimist": "^1.2.7",
     "pkg-pr-new": "^0.0.9",
     "prettier": "^2.8.4",
     "replace-in-file": "^6.3.5",
     "rimraf": "^3.0.2",
-    "ts-jest": "^28.0.8",
-    "typedoc": "^0.25.8",
+    "typedoc": "^0.25.13",
     "typedoc-plugin-markdown": "^4.0.0-next.53",
     "typedoc-plugin-merge-modules": "^5.1.0",
-    "typescript": "^5.4.5"
+    "typescript": "~5.5.4"
   },
   "dependencies": {
+    "@clinic/doctor": "github:meta-introspector/node-clinic-doctor",
+    "bin-up": "^1.3.2",
     "blakejs": "1.2.1",
     "cachedir": "^2.4.0",
+    "clinic": "github:meta-introspector/node-clinic",
+    "create-jest-runner": "^0.12.3",
+    "doctor-runner": "link:../doctor-runner",
+    "import-local": "^3.2.0",
     "isomorphic-fetch": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-circus": "^29.7.0",
+    "jest-cli": "^29.7.0",
     "js-sha256": "^0.9.0",
+    "mkdirp": "^3.0.1",
+    "npm": "10.8.3",
     "reflect-metadata": "^0.1.13",
+    "ts-jest": "^29.2.5",
     "tslib": "^2.3.0"
   }
 }
