--- a/.github/workflows/run-docker-tests.yml
+++ b/.github/workflows/run-docker-tests.yml
@@ -21,78 +21,78 @@ jobs:
     strategy:
       matrix:
         tests:
-          - "/app/src/bindings/crypto/bigint.unit-test.ts"
-          - "/app/src/bindings/crypto/bindings/bindings.unit-test.ts"
           - "/app/src/bindings/crypto/bindings/test-utils.ts"
-          - "/app/src/bindings/crypto/elliptic-curve.unit-test.ts"
-          - "/app/src/bindings/crypto/finite-field.unit-test.ts"
-          - "/app/src/bindings/crypto/glv.unit-test.ts"
-          - "/app/src/bindings/crypto/poseidon.unit-test.ts"
-          - "/app/src/bindings/lib/binable.unit-test.ts"
           - "/app/src/examples/crypto/rsa/test.ts"
           - "/app/src/examples/zkapps/voting/test.ts"
-          - "/app/src/lib/mina/account-update-layout.unit-test.ts"
-          - "/app/src/lib/mina/account-update.unit-test.ts"
-          - "/app/src/lib/mina/actions/batch-reducer-program.unit-test.ts"
-          - "/app/src/lib/mina/actions/batch-reducer.unit-test.ts"
-          - "/app/src/lib/mina/actions/offchain-contract.unit-test.ts"
-          - "/app/src/lib/mina/fetch.unit-test.ts"
-          - "/app/src/lib/mina/hash-input.unit-test.ts"
-          - "/app/src/lib/mina/mina.unit-test.ts"
           - "/app/src/lib/mina/precondition.test.ts"
           - "/app/src/lib/mina/precondition.test.ts"
-          - "/app/src/lib/mina/test/dynamic-call.unit-test.ts"
           - "/app/src/lib/mina/test/test-contract.ts"
           - "/app/src/lib/mina/token.test.ts"
-          - "/app/src/lib/mina/token/forest-iterator.unit-test.ts"
-          - "/app/src/lib/mina/token/token-contract.unit-test.ts"
-          - "/app/src/lib/ml/consistency.unit-test.ts"
-          - "/app/src/lib/proof-system/proof-system.unit-test.ts"
-          - "/app/src/lib/proof-system/sideloaded.unit-test.ts"
-          - "/app/src/lib/provable/test/arithmetic.unit-test.ts"
-          - "/app/src/lib/provable/test/base64.unit-test.ts"
-          - "/app/src/lib/provable/test/bitwise.unit-test.ts"
-          - "/app/src/lib/provable/test/custom-gates-recursion.unit-test.ts"
-          - "/app/src/lib/provable/test/ecdsa.unit-test.ts"
-          - "/app/src/lib/provable/test/elliptic-curve.unit-test.ts"
-          - "/app/src/lib/provable/test/field.unit-test.ts"
-          - "/app/src/lib/provable/test/foreign-curve.unit-test.ts"
-          - "/app/src/lib/provable/test/foreign-field-gadgets.unit-test.ts"
-          - "/app/src/lib/provable/test/foreign-field.unit-test.ts"
           - "/app/src/lib/provable/test/group.test.ts"
-          - "/app/src/lib/provable/test/group.unit-test.ts"
           - "/app/src/lib/provable/test/int.test.ts"
-          - "/app/src/lib/provable/test/keccak.unit-test.ts"
-          - "/app/src/lib/provable/test/lookup.unit-test.ts"
           - "/app/src/lib/provable/test/merkle-list.test.ts"
           - "/app/src/lib/provable/test/merkle-map.test.ts"
           - "/app/src/lib/provable/test/merkle-tree.test.ts"
-          - "/app/src/lib/provable/test/merkle-tree.unit-test.ts"
-          - "/app/src/lib/provable/test/nullifier.unit-test.ts"
           - "/app/src/lib/provable/test/primitives.test.ts"
-          - "/app/src/lib/provable/test/primitives.unit-test.ts"
           - "/app/src/lib/provable/test/provable.test.ts"
-          - "/app/src/lib/provable/test/provable.unit-test.ts"
-          - "/app/src/lib/provable/test/range-check.unit-test.ts"
           - "/app/src/lib/provable/test/scalar.test.ts"
-          - "/app/src/lib/provable/test/sha256.unit-test.ts"
-          - "/app/src/lib/provable/test/string.unit-test.ts"
-          - "/app/src/lib/provable/test/struct.unit-test.ts"
           - "/app/src/lib/provable/test/test-utils.ts"
-          - "/app/src/lib/testing/testing.unit-test.ts"
-          - "/app/src/lib/util/base58.unit-test.ts"
-          - "/app/src/mina-signer/src/sign-legacy.unit-test.ts"
-          - "/app/src/mina-signer/src/sign-zkapp-command.unit-test.ts"
-          - "/app/src/mina-signer/src/signature.unit-test.ts"
-          - "/app/src/mina-signer/src/transaction-hash.unit-test.ts"
           - "/app/src/mina-signer/tests/client.test.ts"
           - "/app/src/mina-signer/tests/keypair.test.ts"
           - "/app/src/mina-signer/tests/message.test.ts"
           - "/app/src/mina-signer/tests/payment.test.ts"
           - "/app/src/mina-signer/tests/rosetta.test.ts"
           - "/app/src/mina-signer/tests/stake-delegation.test.ts"
-          - "/app/src/mina-signer/tests/verify-in-snark.unit-test.ts"
-          - "/app/src/mina-signer/tests/zkapp.unit-test.ts"
+#          - "/app/src/mina-signer/tests/verify-in-snark.unit-test.ts"
+#          - "/app/src/mina-signer/tests/zkapp.unit-test.ts"
+#          - "/app/src/mina-signer/src/transaction-hash.unit-test.ts"
+#          - "/app/src/bindings/crypto/bigint.unit-test.ts"
+#          - "/app/src/bindings/crypto/bindings/bindings.unit-test.ts"
+#          - "/app/src/bindings/crypto/elliptic-curve.unit-test.ts"
+#          - "/app/src/bindings/crypto/glv.unit-test.ts"
+#          - "/app/src/bindings/crypto/poseidon.unit-test.ts"
+#          - "/app/src/bindings/lib/binable.unit-test.ts"
+#          - "/app/src/lib/mina/account-update-layout.unit-test.ts"
+#          - "/app/src/lib/mina/account-update.unit-test.ts"
+#          - "/app/src/lib/mina/actions/batch-reducer-program.unit-test.ts"
+#          - "/app/src/lib/mina/actions/batch-reducer.unit-test.ts"
+#          - "/app/src/lib/mina/actions/offchain-contract.unit-test.ts"
+#          - "/app/src/lib/mina/fetch.unit-test.ts"
+#          - "/app/src/lib/mina/hash-input.unit-test.ts"
+#          - "/app/src/lib/mina/mina.unit-test.ts"
+#          - "/app/src/lib/mina/test/dynamic-call.unit-test.ts"
+#          - "/app/src/lib/mina/token/forest-iterator.unit-test.ts"
+#          - "/app/src/lib/mina/token/token-contract.unit-test.ts"
+#          - "/app/src/lib/ml/consistency.unit-test.ts"
+#          - "/app/src/lib/proof-system/proof-system.unit-test.ts"
+#          - "/app/src/lib/proof-system/sideloaded.unit-test.ts"
+#          - "/app/src/lib/provable/test/arithmetic.unit-test.ts"
+#          - "/app/src/lib/provable/test/base64.unit-test.ts"
+#          - "/app/src/lib/provable/test/bitwise.unit-test.ts"
+#          - "/app/src/lib/provable/test/custom-gates-recursion.unit-test.ts"
+#          - "/app/src/lib/provable/test/ecdsa.unit-test.ts"
+#          - "/app/src/lib/provable/test/elliptic-curve.unit-test.ts"
+#          - "/app/src/lib/provable/test/field.unit-test.ts"
+#          - "/app/src/lib/provable/test/foreign-curve.unit-test.ts"
+#          - "/app/src/lib/provable/test/foreign-field-gadgets.unit-test.ts"
+#          - "/app/src/lib/provable/test/foreign-field.unit-test.ts"
+#          - "/app/src/lib/provable/test/group.unit-test.ts"
+#          - "/app/src/lib/provable/test/keccak.unit-test.ts"
+#          - "/app/src/lib/provable/test/lookup.unit-test.ts"
+#          - "/app/src/lib/provable/test/merkle-tree.unit-test.ts"
+#          - "/app/src/lib/provable/test/nullifier.unit-test.ts"
+#          - "/app/src/lib/provable/test/primitives.unit-test.ts"
+#          - "/app/src/lib/provable/test/provable.unit-test.ts"
+#          - "/app/src/lib/provable/test/range-check.unit-test.ts"
+#          - "/app/src/lib/provable/test/sha256.unit-test.ts"
+#          - "/app/src/lib/provable/test/string.unit-test.ts"
+#          - "/app/src/lib/provable/test/struct.unit-test.ts"
+#          - "/app/src/lib/testing/testing.unit-test.ts"
+#          - "/app/src/lib/util/base58.unit-test.ts"
+#          - "/app/src/mina-signer/src/sign-legacy.unit-test.ts"
+#          - "/app/src/mina-signer/src/sign-zkapp-command.unit-test.ts"
+#          - "/app/src/mina-signer/src/signature.unit-test.ts"
+##          - "/app/src/bindings/crypto/finite-field.unit-test.ts"
     runs-on: ubuntu-latest
     steps:
     - name: Sets NAME
