--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
 
     "jest": {
 	"verbose": true,
+	"allowJs": true,
 	"preset": "ts-jest/presets/default-esm",
 	"testRegex": "(/__tests__/.*|(\\.|/)(test|unit-test))\\.(js?|ts?)$",
 	"modulePathIgnorePatterns": [
