--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,6 +1,13 @@
-# All files require a review from @o1-labs/o1js-admins
+# By default, review is required by o1js-admins
 * @o1-labs/o1js-admins
 
-# Changes to source code should be reviewed by exploration team and future zkapps team 
-/src/examples @o1-labs/o1js-admins @o1-labs/exploration-team @o1-labs/future-zkapps
+# Changes to the following paths should be reviewed by o1js-admins, but we will tag current and future zkapps teams as well (incorrect use of codeowners)
+# We are relying on good faith to wait for admin approval on these PRs
+# Dangerous PRs that could release a new version, new consensus rules, or anything like that will necessarily touch more than `/src/lib`, so this is minimally risky
 /src/lib @o1-labs/o1js-admins @o1-labs/exploration-team @o1-labs/future-zkapps
+
+# Changes to the following paths can be safely owned by the current and future zkapps teams (correct use of codeowners)
+/src/examples @o1-labs/exploration-team @o1-labs/future-zkapps
+/src/lib/util @o1-labs/exploration-team @o1-labs/future-zkapps
+
+
