--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "js-sha256": "^0.9.0",
     "libsodium-wrappers-sumo": "^0.7.15",
     "reflect-metadata": "^0.1.13",
+    "stacktrace-js": "^2.0.2",
     "tslib": "^2.3.0"
   }
 }
